Added python version of combined API

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ obj
 /csharp/cplex/api/dev_cpxsharp.csproj
 /csharp/cplex/api/dev_cplexsharp.csproj
 /csharp/gurobi/api/dev_gurobisharp.csproj
+/test/models/*.sol
