Added documentation and refactoring python

--- a/csharp/cplex/CMakeLists.txt
+++ b/csharp/cplex/CMakeLists.txt
@@ -1,2 +1,2 @@
-include("../createSwigProject.cmake")
-createSwigProject(cplex)
+include("../createCsharpProject.cmake")
+createCsharpProject(cplex)
