--- a/csharp/simpleapi/CMakeLists.txt
+++ b/csharp/simpleapi/CMakeLists.txt
@@ -1,4 +1,4 @@
-include("../createSwigProject.cmake")
+include("../createCsharpProject.cmake")
 set(DIR_CPP_INCLUDE ${DIR_CPP_INCLUDE}
 ${cplex_INCLUDE_DIR}
 ${gurobi_INCLUDE_DIR}
@@ -6,7 +6,7 @@ ${CMAKE_CURRENT_SOURCE_DIR}/../../cpp/cplex/include
 ${CMAKE_CURRENT_SOURCE_DIR}/../../cpp/gurobi/include
 )
 
-createSwigProject(simpleapi)
+createCsharpProject(simpleapi)
 target_link_libraries(simpleapisharp_c
 cplex-drv cplex-lib
 gurobi-drv gurobi-lib)
