--- a/csharp/simpleapi/api/simpleapisharp.csproj.in
+++ b/csharp/simpleapi/api/simpleapisharp.csproj.in
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml"/>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Utils.cs" />
     @STRINGLIST@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
