--- a/doc/cpp/CMakeLists.txt
+++ b/doc/cpp/CMakeLists.txt
@@ -2,7 +2,7 @@ find_package(Doxygen REQUIRED)
 find_package(Sphinx REQUIRED)
 
 
-set(BASEDIR ${CMAKE_SOURCE_DIR}/cpp)
+set(BASEDIR ${CMAKE_CURRENT_SOURCE_DIR}/../../cpp)
 set(DOXYGEN_INPUT_DIR "${BASEDIR}/generic/include"
                       "${BASEDIR}/gurobi/include"
                       "${BASEDIR}/cplex/include")
