Refactored to have capital enumeration members.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,8 +137,9 @@ function(AddSolverStub solver includes libs)
 
   set(IMPORTLIB ${solver}-lib)
   if(NOT TARGET ${IMPORTLIB})
-    set(LIBFILENAME ${solver}-lib)
-    find_library(${solver}LIBFILE ${LIBFILENAME} PATHS ${AMPLLIBS_DIR} REQUIRED) 
+    set(LIBFILENAME ${solver}-lib.lib)
+    message("Finding ${solver}LIBFILE ${LIBFILENAME} PATHS ${AMPLLIBS_DIR} REQUIRED")
+    find_library(${solver}LIBFILE ${LIBFILENAME} PATHS ${AMPLLIBS_DIR} REQUIRED NO_DEFAULT_PATH) 
     if(NOT ${solver}LIBFILE)
       message(FATAL_ERROR "AMPL solver library ${solver}-lib not found in ${AMPLLIBS_DIR}")
     endif()
