--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,6 +1,12 @@
 jobs:
 - job: linux
   pool: {vmImage: 'Ubuntu-16.04'}
+  strategy:
+    matrix:
+      gurobi:
+        solver: 'gurobi'
+      cplex:
+        solver: 'cplex'
   variables:
     wheelhouse: $(Build.ArtifactStagingDirectory)
   steps:
@@ -9,27 +15,19 @@ jobs:
         sudo apt-get install swig
       displayName: Install SWIG
     - bash: |
-        curl -O curl -O https://www.ampl.online/~fdabrandao/gurobi81.zip
-        unzip gurobi81.zip
-        mv gurobi81 amplpy_gurobi/amplpy_gurobi/
-      displayName: Download GUROBI libraries
+        cd libs
+        curl -O https://ampl.com/dl/fdabrandao/solvers-public-libs.zip
+        unzip solvers-public-libs.zip
+        cp -r solvers-public-libs/* .
+      displayName: Download libraries
     - bash: |
-        export GUROBI_HOME=`pwd`/amplpy_gurobi/amplpy_gurobi/gurobi81/
-        export GUROBI_INCLUDE_DIR=$GUROBI_HOME/include/
-        export GUROBI_LIBRARY=$GUROBI_HOME/linux64/
-        cd manylinux
-        ./create.sh
-        ./run.sh
-        cd lib64
-        unzip solvers.zip
-      displayName: Prepare base package
-    - bash: |
-        cd manylinux/lib64/solvers/amplpy_gurobi
+        cd python/$SOLVER
+        bash prepare.sh
         bash swig.sh
         pip install --upgrade pip
         pip install urllib3[secure] --upgrade
-        pip install cibuildwheel==0.12.0
-        CIBW_SKIP='*-manylinux*_i686' cibuildwheel --platform linux --output-dir $WHEELHOUSE .
+        pip install cibuildwheel==1.6.2
+        CIBW_SKIP='*-manylinux*_i686' cibuildwheel --output-dir $WHEELHOUSE .
         # python setup.py sdist -d $WHEELHOUSE
         pip install twine
         twine upload -u $(TWINE_USERNAME) -p $(TWINE_PASSWORD) $WHEELHOUSE/*.whl || true
@@ -37,7 +35,13 @@ jobs:
     - task: PublishBuildArtifacts@1
       inputs: {pathtoPublish: '$(Build.ArtifactStagingDirectory)'}
 - job: macos
-  pool: {vmImage: 'macOS-10.13'}
+  pool: {vmImage: 'macOS-10.15'}
+  strategy:
+    matrix:
+      gurobi:
+        solver: 'gurobi'
+      cplex:
+        solver: 'cplex'
   variables:
     wheelhouse: $(Build.ArtifactStagingDirectory)
   steps: 
@@ -46,28 +50,19 @@ jobs:
         brew install swig
       displayName: Install SWIG
     - bash: |
-        curl -O curl -O https://www.ampl.online/~fdabrandao/gurobi81.zip
-        unzip gurobi81.zip
-        mv gurobi81 amplpy_gurobi/amplpy_gurobi/
-      displayName: Download GUROBI libraries
+        cd libs
+        curl -O https://ampl.com/dl/fdabrandao/solvers-public-libs.zip
+        unzip solvers-public-libs.zip
+        cp -r solvers-public-libs/* .
+      displayName: Download libraries
     - bash: |
-        export GUROBI_HOME=`pwd`/amplpy_gurobi/amplpy_gurobi/gurobi81/
-        export GUROBI_INCLUDE_DIR=$GUROBI_HOME/include/
-        export GUROBI_LIBRARY=$GUROBI_HOME/macos64/
-        install_name_tool -id @rpath/libgurobi81.dylib $GUROBI_LIBRARY/libgurobi81.dylib
-        mkdir build
-        cd build
-        cmake .. -DARCH=64
-        make package
-        unzip solvers.zip
-      displayName: Prepare base package
-    - bash: |
-        cd build/solvers/amplpy_gurobi
+        cd python/$SOLVER
+        bash prepare.sh
         bash swig.sh
         pip install --upgrade pip
         pip install urllib3[secure] --upgrade
-        pip install cibuildwheel==0.12.0
-        cibuildwheel --platform macos --output-dir $WHEELHOUSE .
+        pip install cibuildwheel==1.6.2
+        cibuildwheel --output-dir $WHEELHOUSE .
         pip install twine
         twine upload -u $(TWINE_USERNAME) -p $(TWINE_PASSWORD) $WHEELHOUSE/*.whl || true
       displayName: Build wheels
@@ -75,6 +70,12 @@ jobs:
       inputs: {pathtoPublish: '$(Build.ArtifactStagingDirectory)'}
 - job: windows
   pool: {vmImage: 'vs2017-win2016'}
+  strategy:
+    matrix:
+      gurobi:
+        solver: 'gurobi'
+      cplex:
+        solver: 'cplex'
   variables:
     wheelhouse: $(Build.ArtifactStagingDirectory)
   steps:
@@ -90,30 +91,19 @@ jobs:
         choco install -y --x86 swig
       displayName: Install SWIG
     - bash: |
-        curl -O curl -O https://www.ampl.online/~fdabrandao/gurobi81.zip
-        unzip gurobi81.zip
-        mv gurobi81 amplpy_gurobi/amplpy_gurobi/
-      displayName: Download GUROBI libraries
+        cd libs
+        curl -O https://ampl.com/dl/fdabrandao/solvers-public-libs.zip
+        unzip solvers-public-libs.zip
+        cp -r solvers-public-libs/* .
+      displayName: Download libraries
     - bash: |
-        export PATH="/c/Program Files/CMake/bin:$PATH"
-        export GUROBI_HOME=`pwd`/amplpy_gurobi/amplpy_gurobi/gurobi81/
-        export GUROBI_INCLUDE_DIR=$GUROBI_HOME/include/
-        export GUROBI_LIBRARY=$GUROBI_HOME/win64/
-        curl -o amplpy_gurobi/amplpy_gurobi/swig/stdint.h https://raw.githubusercontent.com/mattn/gntp-send/master/include/msinttypes/stdint.h
-        mkdir build
-        cd build
-        cmake .. -DARCH=64 -A x64
-        cmake --build . --config Release
-        cpack
-        unzip solvers.zip
-      displayName: Prepare base package
-    - bash: |
-        cd build/solvers/amplpy_gurobi
+        cd python/$SOLVER
+        bash prepare.sh
         bash swig.sh
         python -m pip install --user --upgrade pip
         python -m pip install urllib3[secure] --upgrade
-        python -m pip install cibuildwheel==0.12.0
-        CIBW_SKIP='*-win32' cibuildwheel --platform windows --output-dir $WHEELHOUSE .
+        python -m pip install cibuildwheel==1.6.2
+        CIBW_SKIP='*-win32' cibuildwheel --output-dir $WHEELHOUSE .
         python -m pip install twine
         python -m twine upload -u $(TWINE_USERNAME) -p $(TWINE_PASSWORD) $WHEELHOUSE/*.whl || true
         echo $WHEELHOUSE
