--- a/csharp/cplex/api/cplexsharp.csproj.in
+++ b/csharp/cplex/api/cplexsharp.csproj.in
@@ -7,7 +7,7 @@
     <ProjectGuid>{295191BA-3EFA-4EFD-A738-472E5DA8B48C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>cplexsharp</RootNamespace>
+    <RootNamespace>ampls</RootNamespace>
     <AssemblyName>dev_cplexsharp</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
