--- a/csharp/simpleapi/api/simpleapisharp.csproj.in
+++ b/csharp/simpleapi/api/simpleapisharp.csproj.in
@@ -7,7 +7,7 @@
     <ProjectGuid>{235291CC-3EFA-4EFD-A738-472E5DA8B48C}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>simpleapisharp</RootNamespace>
+    <RootNamespace>ampls</RootNamespace>
     <AssemblyName>dev_simpleapisharp</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
