Changes to facililtate scripts debugging on VS.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,8 +93,10 @@ foreach(s ${SOLVER_NAMES})
 endforeach()
 
 if(WIN32)
-    set(gurobi_LIBRARY ${gurobi_BASE_DIR}/lib/win64/gurobi90.lib)
-    set(cplex_LIBRARY ${cplex_BASE_DIR}/lib/win64/cplex12100.lib)
+    set(gurobi_LIBRARY "${gurobi_BASE_DIR}/lib/win64/gurobi90.lib"
+                       "${gurobi_BASE_DIR}/lib/win64/gurobi90.dll")
+    set(cplex_LIBRARY "${cplex_BASE_DIR}/lib/win64/cplex12100.lib"
+                      "${cplex_BASE_DIR}/lib/win64/cplex12100.dll")
     set(xpress_LIBRARY ${xpress_BASE_DIR}/lib/win64/xprs.lib)
     set(AMPLS_DIR ${SOLVERLIBS}/ampls/win64) # AMPL base driver library locations
 elseif(APPLE)
@@ -138,13 +140,12 @@ function(AddSolverStub solver includes libs)
   set(IMPORTLIB ${solver}-lib)
   if(NOT TARGET ${IMPORTLIB})
     set(LIBFILENAME ${solver}-lib.lib)
-    message("Finding ${solver}LIBFILE ${LIBFILENAME} PATHS ${AMPLS_DIR} REQUIRED")
     find_library(${solver}LIBFILE ${LIBFILENAME} PATHS ${AMPLS_DIR} REQUIRED NO_DEFAULT_PATH) 
     if(NOT ${solver}LIBFILE)
       message(FATAL_ERROR "AMPL solver library ${solver}-lib not found in ${AMPLS_DIR}")
     endif()
     if(WIN32)
-      find_file(${solver}DLLFILE ${LIBFILENAME}.dll PATHS ${LIBSDIR})
+      find_file(${solver}DLLFILE ${solver}-lib.dll PATHS ${AMPLS_DIR} REQUIRED NO_DEFAULT_PATH) 
     endif()
     add_library(${IMPORTLIB} SHARED IMPORTED)
     if(WIN32)
