--- a/csharp/cplex/cplexsharp-test/cplexsharp-test.csproj
+++ b/csharp/cplex/cplexsharp-test/cplexsharp-test.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="cplexsharp">
+      <HintPath>..\..\..\build\vs64\bin\cplexsharp.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -50,10 +53,7 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\api\dev_cplexsharp.csproj">
-      <Project>{5003e728-ea01-318d-a435-57763b66e123}</Project>
-      <Name>dev_cplexsharp</Name>
-    </ProjectReference>
+    <WCFMetadata Include="Connected Services\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
